2018-02-07 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #83799: Remove unused hidden fields from password editing form
	* Resolves #82874: Gender is not shown on preview
	* Resolves #82992: Overwriting a gender label removes the other gender labels
	* Resolves #82614: Custom field radio button label in preview and emails empty

2017-08-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #81963: renderType missing on fe_users status and fe_groups_language_overlay select fields

2017-05-29 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #81365: Missing button labels in labels list
	* Resolves #81367: Call to incorrect query builder function
	* Resolves #81369: Unsubscribe link from Direct Mail fails
	* Resolves #81370: Input fields of type number or email not handled correctly
	* Resolves #81371: Infomail form is missing hidden fields
	* Resolves #81372: Account deletion may fail
	* Resolves #81373: The freeCap word hash should not be checked more than once
	* Update version to 5.0.1

2017-03-26 Oliver Klee
	* Resolves #80286: Make the DB definition MySQL strict compatible

2017-01-25 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Code cleanup
	* Follow-up to Resolves #76292: mm-relation: foreing uid is saved in uid_local and vice versa
	* Migrate extension icon to svg
	* Update extension requirements

2017-01-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up to Resolves ##79423: Migrate upload fields (image) to FAL
	* Resolves #79449: Allow special characters in username in default configuration
	* Update version to 5.0.0
	* Resolves #76292: mm-relation: foreing uid is saved in uid_local and vice versa
	* Resolves #79454: Use mb_strtoupper in Marker.php
	* Resolves #79456: Remove deprecated code from TransmissionSecurity.php

2017-01-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up to Resolves ##79423: Migrate upload fields (image) to FAL

2017-01-22 Stanislas Rolland  <typo3(arobas)sjbr.ca>