@@ -3,6 +3,7 @@
 	* Resolves #82874: Gender is not shown on preview
 	* Resolves #82992: Overwriting a gender label removes the other gender labels
 	* Resolves #82614: Custom field radio button label in preview and emails empty
+	* Resolves #81844: HTML email gets HTML conditional comments for Outlook removed
 
 2017-08-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #81963: renderType missing on fe_users status and fe_groups_language_overlay select fields
